Fix CA-2811: Fix spacing for property pill

--- a/src/insights-app/insights-builder/builder-group/property-type-prefix/index.styl
+++ b/src/insights-app/insights-builder/builder-group/property-type-prefix/index.styl
@@ -7,7 +7,6 @@
 
   > svg-icon
     height 18px
-    margin 1px -2px 0 0px
     min-height 18px
     min-width 18px
     transform scale(.95)
